docs(research): enrich jav-research with JDK 24-26 and project convergence, college cross-links
Ninth bucket of the research-catalog enrichment mission.

Adds "Addendum: JDK 24 -> 26 and the Amber/Valhalla/Leyden convergence
(2025-2026)" to history.md covering:
- JDK 24 (Mar 2025): virtual thread synchronized-block pinning fixed,
  Leyden AOT caching 40% startup improvement demonstrated
- JDK 25 LTS (Sept 16 2025): new Oracle/OpenJDK long-term-support
- JDK 26 (Mar 17 2026): AOT caching + all GCs (JEP 483), Valhalla
  value classes preview (JEP 401), pattern matching 4th preview
- Project Leyden shipping AOT caching without GraalVM native-image
- Project Valhalla first concrete landing after 12 years (value classes)
- Project Amber pattern matching holding for Valhalla interaction work
- Virtual threads reach production-grade in JDK 24

Adds College Departments cross-link section to coding, engineering,
business, history.

6 sources cited.